# base64_decoder_cli

./: Cargo.toml
src/: decode_base64.rs  lib.rs  main.rs  read_file.rs
tests/: decode_base64.rs
