[package]
name = "base64_decoder_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"
author = ["Tomás Lucas <tomaslucas@gmail.com>"]
description = "Decodifica una cadena en base64 desde un archivo y extrae una palabra específica"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
base64 = "0.21"
